<resources>
    <string name="app_name">FunnyPetsMobile</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="register_google">Sing in with Google +</string>
    <string name="username">Username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">FunnyPets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_add_favourite">Agregar a favoritos</string>
    <string name="action_play_next">Siguiente canción</string>
    <string name="backdrop_title">Música para el momento</string>
    <string name="backdrop_subtitle">Los mejores 20</string>
    <string name="Chat">Chat</string>
    <string name="funny_pest">FunnyPets</string>
    <string name="publicar">Publicar</string>
    <string name="Search">Search</string>
    <string name="categoria">Categoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string-array name="planets_array">
        <item>Seleccione....</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Loro</item>
        <item>Perico</item>
        <item>Caballo</item>
        <item>Hamster</item>
        <item>Araña</item>
        <item>Cocodrilo</item>
    </string-array>

    <string-array name="seso">
        <item>Seleccione....</item>
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string name="title_detailsactivity_list">Items</string>
    <string name="title_detailsactivity_detail">detailsActivity Detail</string>

</resources>
