<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout

                android:background="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Funny pets"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="40dp"
                    />


                    />

        </LinearLayout>
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/logo_fp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logofunnypets2"
                android:layout_gravity="center_horizontal"></android.support.v7.widget.AppCompatImageView>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:gravity="center_horizontal">

                    <AutoCompleteTextView
                        android:drawableLeft="@drawable/personlogin"
                        android:drawablePadding="10dp"
                        android:id="@+id/email"
                        android:cursorVisible="true"


                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"

                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <EditText

                        android:drawableLeft="@drawable/passwordlogin"
                        android:drawablePadding="10dp"
                        android:id="@+id/password"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

<LinearLayout
    android:layout_marginTop="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_register"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:textColor="@color/white"

        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"

        android:text="@string/register"
        android:textStyle="bold" />



</LinearLayout>

            <LinearLayout
                android:id="@+id/redes_sociales"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"

                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/facebookblanco64"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/instagramblanco64"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/twitterblanco64"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/tumblrblanco64"
                    android:layout_margin="10dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>